--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bookshelf App</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <title>Bookshelf</title>
+  <link rel="stylesheet" href="../css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
@@ -21,10 +21,10 @@
         </button>
         <ul class="nav_menu_list">
           <li class="nav_menu_item">
-            <a href="#" class="nav_menu_link active">Home</a>
+            <a href="../index.html" class="nav_menu_link">Home</a>
           </li>
           <li class="nav_menu_item">
-            <a href="pages/bookLayout.html" class="nav_menu_link">Book list</a>
+            <a href="#" class="nav_menu_link active">Bookshelf</a>
           </li>
           <li class="nav_menu_item">
             <a href="#" class="nav_menu_link">Documentation</a>
@@ -38,36 +38,8 @@
   </header>
 
   <section class="wrapper">
-    <div class="container">
-      <div class="grid-cols-2">
-        <div class="grid-item-1">
-          <h1 class="main-heading">
-            Explore, Read everything in
-            <br />
-            <span>Bookshelf app.</span>
-          </h1>
-          <p class="info-text">
-            A website-based application that allows users to easily store, organize, and explore their book collections
-            digitally.
-          </p>
-          <div class="btn_wrapper">
-            <button class="btn view_more_btn">
-              Get started <i class="ri-arrow-right-line"></i>
-            </button>
-          </div>
-        </div>
-        <div class="grid-item-2">
-          <div class="team_img_wrapper">
-            <img src="assets/img/bookViewer.png" alt="team-img" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="wrapper">
     <div class="container" data-aos="fade-up" data-aos-duration="800">
-      <!-- <div class="grid-cols-3">
+      <div class="grid-cols-3">
         <div class="grid-col-item">
           <div class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -76,7 +48,7 @@
             </svg>
           </div>
           <div class="featured_info">
-            <span>Built for developers </span>
+            <span>Built for developers</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
               ratione facilis animi voluptas exercitationem molestiae.
@@ -114,13 +86,13 @@
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
   </section>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <script src="js/animation.js" defer></script>
+  <script src="../js/animation.js" defer></script>
 </body>
 
 </html>
