determine title -> WestNovel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bookshelf App</title>
+  <title>WestNovel</title>
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -13,7 +13,7 @@
   <header class="container header">
     <nav>
       <div class="logo">
-        <h2>Bookshelf App.</h2>
+        <h2>WestNovel.</h2>
       </div>
       <div class="nav_menu" id="nav_menu">
         <button class="close_btn" id="close_btn">
@@ -24,7 +24,7 @@
             <a href="#" class="nav_menu_link active">Home</a>
           </li>
           <li class="nav_menu_item">
-            <a href="pages/bookLayout.html" class="nav_menu_link">Book list</a>
+            <a href="pages/bookLayout.html" class="nav_menu_link">Explore Books</a>
           </li>
           <li class="nav_menu_item">
             <a href="#" class="nav_menu_link">Documentation</a>
