add button on Books page

--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -37,9 +37,16 @@
     </nav>
   </header>
 
-  <section class="wrapper">
+  <section class="">
     <div class="container" data-aos="fade-up" data-aos-duration="800">
-      <div class="grid-cols-3">
+        <div class="grid-cols-3">
+            <div class="btn_wrapper">
+                <button class="btn view_more_btn">
+                  Add New Books <i class="ri-add-fill"></i>
+                </button>
+            </div>
+        </div>
+        <div class="grid-cols-3">
         <div class="grid-col-item">
           <div class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
