--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -37,15 +37,17 @@
     </nav>
   </header>
 
-  <section class="">
-    <div class="container" data-aos="fade-up" data-aos-duration="800">
+  <section>
+    <!-- <div class="container" data-aos="fade-up" data-aos-duration="800"> -->
+    <div class="container">
         <div class="grid-cols-3">
             <div class="btn_wrapper">
                 <button class="btn view_more_btn">
-                  Add New Books <i class="ri-add-fill"></i>
+                  Add Book <i class="ri-add-fill"></i>
                 </button>
             </div>
         </div>
+        
         <div class="grid-cols-3">
         <div class="grid-col-item">
           <div class="icon">
@@ -55,13 +57,13 @@
             </svg>
           </div>
           <div class="featured_info">
-            <span>Built for developers</span>
+            <span>Unfinished reading</span>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-              ratione facilis animi voluptas exercitationem molestiae.
+              04
             </p>
           </div>
         </div>
+
         <div class="grid-col-item">
           <div class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -70,10 +72,9 @@
             </svg>
           </div>
           <div class="featured_info">
-            <span>Designed to be modern</span>
+            <span>Finished Reading</span>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              ipsum esse corrupti. Quo, labore debitis!
+              88
             </p>
           </div>
         </div>
@@ -86,19 +87,19 @@
             </svg>
           </div>
           <div class="featured_info">
-            <span>Documentation for everything</span>
+            <span>Deleted Books</span>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-              nostrum voluptate totam ipsa corrupti vero!
+              33
             </p>
           </div>
         </div>
+
       </div>
     </div>
   </section>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
   <script src="../js/animation.js" defer></script>
 </body>
 
