--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="grid-cols-3">
             <div class="btn_wrapper">
-                <button class="btn view_more_btn">
+                <button id="modalButton" class="btn view_more_btn">
                   Add Book <i class="ri-add-fill"></i>
                 </button>
             </div>
@@ -103,7 +103,8 @@
     <div class="container">
       <div class="grid-cols-default">
 
-        <div class="form-content">
+        <div class="form-content" id="bookModal">
+          <span class="close">&times;</span>
           <h2>Create a new books</h2>
           <form class="form" action="#" id="form">
             <div class="form-group form-title">
@@ -117,6 +118,10 @@
             <div class="form-group form-title">
               <label for="years">Tahun</label>
               <input type="number" id="years" name="years" required>
+            </div>
+            <div class="checkbox-group">
+              <input type="checkbox" name="readedBook">
+              <label>Have you read the book?</label>
             </div>
             <input type="submit" value="Submit" name="Submit" class="btn-submit">
           </form>
