--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -117,7 +117,7 @@
             </div>
             <div class="form-group form-title">
               <label for="years">Tahun</label>
-              <input type="number" id="years" name="years" required>
+              <input type="number" id="years" name="year" required>
             </div>
             <div class="checkbox-group">
               <input type="checkbox" name="readedBook">
