--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -146,12 +146,17 @@
           <div class="list-item" id="books">
 
           <div class="cardBox-item">
-            <div class="cardBorder"></div>
             <div class="bookItem">
-              <h2 class="book-title">Object Oriented Programming</h2>
-              <span>Penulis : </span>
-              <span>Tahun : </span>
-              <span>Status {}</span>
+              <h2 id="book-title">Object Oriented Programming</h2>
+              <span>
+                Penulis :  <span id="book-author"></span>
+              </span>
+              <span>
+                Tahun :  <span id="book-year"></span>
+              </span>
+              <span>
+                Status :  <span id="book-status"></span>
+            </span>
               <ul class="social-media">
                 <li>
                   <a href="">
