updating function postBook

--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -142,6 +142,32 @@
         <div class="grid-cols-4">
           <div class="list-item" id="books">
 
+            <div class="cardBox-item">
+              <div class="bookItem">
+                <h2 id="book-title">Object Oriented Programming</h2>
+                <span>
+                  Penulis :  <span id="book-author"></span>
+                </span>
+                <span>
+                  Tahun :  <span id="book-year"></span>
+                </span>
+                <span>
+                  Status :  <span id="book-status"></span>
+              </span>
+              </div>
+            </div>
+  
+
+          </div> 
+        </div>
+
+      <div class="hero-content">
+        <p class="text-md-content">Finished Read</p>
+      </div>
+
+      <div class="grid-cols-4">
+        <div class="list-item" id="completedBooks">
+
           <div class="cardBox-item">
             <div class="bookItem">
               <h2 id="book-title">Object Oriented Programming</h2>
@@ -179,15 +205,6 @@
             </div>
           </div>
 
-          </div> 
-        </div>
-
-      <div class="hero-content">
-        <p class="text-md-content">Finished Read</p>
-      </div>
-
-      <div class="grid-cols-4">
-        <div class="list-item" id="completedBooks">
 
         </div> 
       </div>
