try fix postBook

--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -94,7 +94,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>        
 
   <section>
     <div class="container">
@@ -113,12 +113,12 @@
               <input type="text" id="author" name="author" required>
             </div>
             <div class="form-group form-title">
-              <label for="years">Tahun</label>
-              <input type="number" id="years" name="year" required>
+              <label for="year">Tahun</label>
+              <input type="number" id="year" name="year" required>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="readedBook">
-              <label>Have you read the book?</label>
+              <input type="checkbox" name="readedBook" id="validateBook">
+              <label for="validateBook">Have you read the book?</label>
             </div>
             <input type="submit" value="Submit" name="Submit" class="btn-submit">
           </form>
@@ -180,7 +180,7 @@
               <span>
                 Status :  <span id="book-status"></span>
             </span>
-              <ul class="social-media">
+              <!-- <ul class="social-media">
                 <li>
                   <div class="undo-button">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 512 512">
@@ -201,7 +201,7 @@
                       <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>
                   </div>
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
 
