feat: book count

--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -59,9 +59,7 @@
           </div>
           <div class="featured_info">
             <span>Unfinished reading</span>
-            <p>
-              4
-            </p>
+            <p id="unfinished-reading"></p>
           </div>
         </div>
 
@@ -73,9 +71,7 @@
           </div>
           <div class="featured_info">
             <span>Finished Reading</span>
-            <p>
-              8
-            </p>
+            <p id="finished-reading"></p>
           </div>
         </div>
 
