--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -83,7 +83,7 @@
           </div>
           <div class="featured_info">
             <span>Deleted Books</span>
-            <p>
+            <p id="deletedBooks">
               9
             </p>
           </div>
