--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -26,7 +26,7 @@
             <a href="../index.html" class="nav_menu_link">Home</a>
           </li>
           <li class="nav_menu_item">
-            <a href="#" class="nav_menu_link active">Explore Books</a>
+            <a href="" class="nav_menu_link active">Explore Books</a>
           </li>
           <li class="nav_menu_item">
             <a href="#" class="nav_menu_link">Documentation</a>
@@ -131,6 +131,20 @@
           Our Bookshelf <span>Services.</span>
         </h3>
         
+          <form id="searchBook">
+            <div class="searchBar">
+                <input id="searchBookTitle" type="text" placeholder="Looking for a book?">
+                <button class="btn" type="submit">
+                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" height="1.75em">
+                    <g id="SVGRepo_iconCarrier"> 
+                      <path d="M11 6C13.7614 6 16 8.23858 16 11M16.6588 16.6549L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      </path> 
+                    </g>
+                  </svg>
+                </button>
+            </div>
+        </form>
+        
         <div class="hero-content">
           <p class="text-md-content">Unfinished Read</p>
         </div>
@@ -149,7 +163,7 @@
         <div class="list-item" id="completedBooks">
 
         </div> 
-      </div>.
+      </div>
 
     </div>
   </section>
@@ -158,6 +172,7 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
   <!-- <script src="../js/animation.js" defer></script> -->
   <script src="../js/script.js"></script>
+  <script src="../js/modal.js"></script>
 </body>
 
 </html>
