add animation on bookLayout

--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WestNovel</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/template.css" />
+
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
@@ -21,13 +23,13 @@
         </button>
         <ul class="nav_menu_list">
           <li class="nav_menu_item">
-            <a href="#" class="nav_menu_link active">Home</a>
+            <a href="../index.html" class="nav_menu_link">Home</a>
           </li>
           <li class="nav_menu_item">
-            <a href="pages/bookLayout.html" class="nav_menu_link">Explore Books</a>
+            <a href="bookLayout.html" class="nav_menu_link">Explore Books</a>
           </li>
           <li class="nav_menu_item">
-            <a href="pages/documentation.html" class="nav_menu_link">Documentation</a>
+            <a href="" class="nav_menu_link active">Documentation</a>
           </li>
         </ul>
       </div>
@@ -41,36 +43,18 @@
     <div class="container">
       <div class="grid-cols-2">
         <div class="grid-item-1">
-          <h1 class="main-heading">
-            Embark your journey, Discover it all at
-            <br />
-            <span>WestNovel.</span>
-          </h1>
-          <p class="info-text">
-            A website-based application that allows users to easily store, organize, and explore their book collections
-            digitally.
-          </p>
-          <div class="btn_wrapper">
-            <button class="btn view_more_btn">
-              Get started <i class="ri-arrow-right-line"></i>
-            </button>
-          </div>
-        </div>
-        <div class="grid-item-2">
-          <div class="team_img_wrapper">
-            <img src="assets/img/bookViewer.png" alt="team-img" />
-          </div>
-        </div>
+
       </div>
     </div>
   </section>
+
   <section class="wrapper">
     <div class="container" data-aos="fade-up" data-aos-duration="800"></div>
   </section>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <script src="js/animation.js" defer></script>
+  <script src="../js/animation.js" defer></script>
 </body>
 
 </html>
