--- a/pages/bookLayout.html
+++ b/pages/bookLayout.html
@@ -29,7 +29,7 @@
             <a href="" class="nav_menu_link active">Explore Books</a>
           </li>
           <li class="nav_menu_item">
-            <a href="#" class="nav_menu_link">Documentation</a>
+            <a href="documentation.html" class="nav_menu_link">Documentation</a>
           </li>
         </ul>
       </div>
@@ -40,8 +40,7 @@
   </header>
 
   <section>
-    <!-- <div class="container" data-aos="fade-up" data-aos-duration="800"> -->
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-duration="2000">
         <div class="grid-cols-3">
             <div class="btn_wrapper">
                 <button id="modalButton" class="btn view_more_btn">
@@ -169,8 +168,8 @@
   </section>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
-  <!-- <script src="../js/animation.js" defer></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="../js/animation.js" defer></script>
   <script src="../js/script.js"></script>
   <script src="../js/modal.js"></script>
 </body>
