add notif for doc.html

--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -41,10 +41,11 @@
 
   <section class="wrapper">
     <div class="container">
-      <div class="grid-cols-2">
-        <div class="grid-item-1">
-
-      </div>
+        <center>
+          <h3 class="alt-heading">
+            "Please be patience. <span>Coming soon!"</span>
+          </h3>
+        </center>
     </div>
   </section>
 
